// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toThrow() error class did not throw at all 1`] = `
"expect(function).toThrow(type)

Expected the function to throw an error of type:
  \\"Err\\"
But it didn't throw anything."
`;

exports[`.toThrow() error class threw, but class did not match 1`] = `
"expect(function).toThrow(type)

Expected the function to throw an error of type:
  \\"Err2\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrow() error class threw, but should not have 1`] = `
"expect(function).not.toThrow(type)

Expected the function not to throw an error of type:
  \\"Err\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrow() invalid actual 1`] = `
"expect(function).toThrow(undefined)

Received value must be a function, but instead \\"string\\" was found"
`;

exports[`.toThrow() invalid arguments 1`] = `
"expect(function).not.toThrow(number)

Unexpected argument passed.
Expected: \\"string\\", \\"Error (type)\\" or \\"regexp\\".
Got:
  string: \\"111\\""
`;

exports[`.toThrow() regexp did not throw at all 1`] = `
"expect(function).toThrow(regexp)

Expected the function to throw an error matching:
  /apple/
But it didn't throw anything."
`;

exports[`.toThrow() regexp threw, but message did not match 1`] = `
"expect(function).toThrow(regexp)

Expected the function to throw an error matching:
  /banana/
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrow() regexp threw, but should not have 1`] = `
"expect(function).not.toThrow(regexp)

Expected the function not to throw an error matching:
  /apple/
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrow() strings did not throw at all 1`] = `
"expect(function).toThrow(string)

Expected the function to throw an error matching:
  \\"apple\\"
But it didn't throw anything."
`;

exports[`.toThrow() strings threw, but message did not match 1`] = `
"expect(function).toThrow(string)

Expected the function to throw an error matching:
  \\"banana\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrow() strings threw, but should not have 1`] = `
"expect(function).not.toThrow(string)

Expected the function not to throw an error matching:
  \\"apple\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() error class did not throw at all 1`] = `
"expect(function).toThrowError(type)

Expected the function to throw an error of type:
  \\"Err\\"
But it didn't throw anything."
`;

exports[`.toThrowError() error class threw, but class did not match 1`] = `
"expect(function).toThrowError(type)

Expected the function to throw an error of type:
  \\"Err2\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() error class threw, but should not have 1`] = `
"expect(function).not.toThrowError(type)

Expected the function not to throw an error of type:
  \\"Err\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() invalid actual 1`] = `
"expect(function).toThrowError(undefined)

Received value must be a function, but instead \\"string\\" was found"
`;

exports[`.toThrowError() invalid arguments 1`] = `
"expect(function).not.toThrowError(number)

Unexpected argument passed.
Expected: \\"string\\", \\"Error (type)\\" or \\"regexp\\".
Got:
  string: \\"111\\""
`;

exports[`.toThrowError() regexp did not throw at all 1`] = `
"expect(function).toThrowError(regexp)

Expected the function to throw an error matching:
  /apple/
But it didn't throw anything."
`;

exports[`.toThrowError() regexp threw, but message did not match 1`] = `
"expect(function).toThrowError(regexp)

Expected the function to throw an error matching:
  /banana/
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() regexp threw, but should not have 1`] = `
"expect(function).not.toThrowError(regexp)

Expected the function not to throw an error matching:
  /apple/
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() strings did not throw at all 1`] = `
"expect(function).toThrowError(string)

Expected the function to throw an error matching:
  \\"apple\\"
But it didn't throw anything."
`;

exports[`.toThrowError() strings threw, but message did not match 1`] = `
"expect(function).toThrowError(string)

Expected the function to throw an error matching:
  \\"banana\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;

exports[`.toThrowError() strings threw, but should not have 1`] = `
"expect(function).not.toThrowError(string)

Expected the function not to throw an error matching:
  \\"apple\\"
Instead, it threw:
  Error      
      at jestExpect (packages/expect/src/__tests__/toThrowMatchers-test.js:24:74)"
`;
